styles/styles.css
/* ... */
a[role="button"] {
  cursor: pointer;
  touch-action: manipulation;
  /* stylelint-disable-next-line property-no-vendor-prefix */
  -webkit-user-select: none;
  user-select: none;
}

a.button:any-link:has(span.icon),
button:has(span.icon) {
  display: inline-flex;
  align-items: center;
  gap: 8px;
}

a.button:any-link > span.icon,
button > span.icon {
  line-height: 0;
}

a.button .fa,
a.button i.fa {
  padding: 0 0.25rem;
  color: inherit;
}

a.button:hover,
a.button:focus,
button:hover,
button:focus {
  cursor: pointer;
  color: var(--color-link-hover);
}

button:disabled,
button:disabled:hover {
  background-color: var(--color-gray-200);
  cursor: unset;
}

a.button.primary,
button.primary {
  color: var(--color-white);
  background-color: var(--color-primary);
  white-space: break-spaces;
  padding: 14px 18px;
  line-height: 21px;
}

.button-container:has(+ .button-container) a.button.primary {
  margin-bottom: 0;
}

a.button.primary:hover,
a.button.primary:focus,
button.primary:hover,
button.primary:focus {
  color: var(--color-link-hover);
  background-color: var(--color-white);
  box-shadow: 0 0 10px 1px var(--color-black-alpha-20);
}

a.button.primary:hover .button-border {
  display: block;
  width: 50%;
  margin-bottom: 0;
  position: absolute;
  margin-left: 0;
  height: 4px;
  background: var(--color-link-hover);
  left: 25%;
  bottom: -5px;
}

a.button.secondary,
button.secondary {
  font-style: normal;
  border-color: var(--color-button-secondary);
  color: var(--color-button-primary);
}

a.button.secondary:hover,
a.button.secondary:focus,
button.secondary:hover,
button.secondary:focus {
  color: var(--color-link-hover);
  background-color: var(--color-white);
  box-shadow: 0 0 10px 1px var(--color-black-alpha-20);
}

main input:not([type="radio"], [type="checkbox"]),
main textarea,
main select {
  display: block;
  padding: 5px 15px;
  box-sizing: border-box;
  background-color: var(--color-white);
  border: 1px solid var(--color-input-border);
  border-radius: 0;
  box-shadow: none;
  color: var(--color-input);
  font-size: 15px;
  height: 40px;
  line-height: 1.4286;
  outline: none;
  width: 100% !important;
  max-width: 100% !important;
  font-family: inherit;
}

main textarea {
  height: 100px;
}

main pre {
  background-color: var(--color-gray-200);
  padding: 1em;
  border-radius: 0.25em;
  overflow-x: auto;
  white-space: pre;
}

main blockquote {
  font-style: italic;
  margin: 3rem;
  text-indent: -1rem;
}

main blockquote p::before {
  content: "“";
  line-height: 0;
}

main blockquote p::after {
  content: "”";
  line-height: 0;
}

hr {
  margin-top: 1.5em;
  margin-bottom: 1.5em;
  border: 0;
  border-bottom: 1px solid var(--color-gray-200);
}

img,
video {
  max-width: 100%;
  width: auto;
  height: auto;
}

main .section {
  padding-top: 50px;
  padding-bottom: 50px;
}

main .section > div,
main .section > article,
.container {
  margin-left: auto;
  margin-right: auto;
  padding-left: 15px;
  padding-right: 15px;
  width: var(--layout-max-width);
}

main .section.buttons-in-row {
  padding-top: 0;
  padding-bottom: 0;
}

main .section.buttons-in-row > div {
  padding: 0;
}

@media (max-width: 991px) {
  main .section {
    padding-top: 20px;
    padding-bottom: 20px;
  }

  main .section .default-content-wrapper {
    padding-left: 15px;
    padding-right: 15px;
  }
}

@media (max-width: 767px) {
  main .section.wavecarousel {
    padding-top: 200px;
  }
}

/* Marked as !important as these should not get overriden */
main .section.hero-container,
main .section.hero-advanced-container,
main .section.page-tabs-container,
main .section.html-snippet-container {
  padding-top: 0 !important;
  padding-bottom: 0 !important;
}

main .section > .featured-posts-wrapper {
  padding-top: 40px;
}

main .section.columns-2 {
  display: grid;
  margin: 0 auto;
}

main .section.columns-2 > div,
main .section.columns-2 > article {
  width: 100%;
  padding: 0 15px;
}

@media only screen and (max-width: 767px) {
  a.button:any-link,
  button {
    font-size: var(--font-size-body-xs);
    width: 100%;
    max-width: 200px;
  }

  main .breadcrumbs-wrapper {
    height: 30px;
  }

  main .section.columns-2 {
    padding: 0;
  }
}

@media only screen and (min-width: 768px) {
  main .section.columns-2 {
    grid-template-columns: 1fr;
    padding-left: var(--center-space);
    padding-right: var(--center-space);
  }

  main .section .section.columns-2 {
    padding-left: 0;
    padding-right: 0;
  }

  main .section.columns-2.layout-33-66 {
    grid-template-columns: 33fr 66fr;
  }

  main .section.background-molecules .columns.columns-2-cols > div {
    align-items: flex-start;
  }
}

@media (min-width: 992px) {
  main .section.columns-2 {
    grid-template-columns: 1fr 1fr;
  }
}

main .section.highlight {
  background-color: var(--color-gray-350);
}

main .section.background-grey + .section.wave,
main .section.background-grey-top-half,
main .section.background-grey-bottom-half {
  position: relative;
}

main .section.background-grey + .section.wave {
  margin-bottom: 50px;
}

main .section.background-grey,
main .section.background-grey + .section.wave:not(.background-grey-top-half, .bluegreen) {
  background-color: var(--color-gray-100);
  margin-top: 0;
}

main .section.background-grey-top-half::before,
main .section.background-grey-bottom-half::before,
main .section.background-grey + .section.wave::before {
  content: "";
  background-color: var(--color-gray-100);
  position: absolute;
  left: 0;
  height: 200px;
  width: 100%;
  z-index: -1;
  margin-top: -50px;
}

main .section.background-grey-top-half::before,
main .section.background-grey + .section.wave::before {
  top: 0;
}

main .section.background-grey-bottom-half::before {
  bottom: 0;
}
/* ... */

